--- a/css/blog.css
+++ b/css/blog.css
@@ -1,23 +1,18 @@
 :root {
-    --color-primary: #000000;      /* Fondo negro */
+    --color-primary: #000000;    
     --color-accent-blue: #00FFFF;  
     --color-accent-green: #39FF14; 
 }
 
-/* Aplicación de los tipos de letra a todo el cuerpo y a los títulos */
+
 body {
-    /* Aquí se agrega la imagen de fondo con la ruta que especificaste */
-    /* Opción recomendada (sin espacios en el nombre del archivo): */
-    /* background-image: url('img/fondo.png'); */
-    
-    /* Si decides mantener el espacio en el nombre, usa esta línea: */
     background-image: url(../img/fondo.jpg);
     margin: 0;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
-    color: white; /* Color de texto blanco para contraste */
+    color: white;
     font-family: 'Roboto', sans-serif;
 }
 
